# moderation-scanner

./: .SRCINFO  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Caddyfile  DEPENDENCY_AUDIT_REPORT.md  DEPLOYMENT.md  Dockerfile  Makefile  PERFORMANCE_ANALYSIS.md  PERFORMANCE_FIXES_APPLIED.md  PKGBUILD  PRODUCTION_READINESS_SUMMARY.md  QUICKSTART.md  README.md  account_scanner.py  benchmark_edit.py  build.sh  changelog.md  code_review.py  commit_msg.txt  discord_bot.py  docker-compose.yml  fly.toml  patch.py  pyproject.toml  run-bot.sh  scan.sh  test-scanner.py  test_mod.py  test_scanner.py  webhook.service
.github/: copilot-instructions.md  dependabot.yml  repo-command.yml
.github/workflows/: README.md  auto-format.yml  code-quality.yml  copilot-setup-steps.yml  makefile.yml  pylint.yml  python-package.yml  python-publish.yml  security-scan.yml
cogs/: __init__.py  admin.py  general.py  moderation.py
config/: PKGBUILD  discord-scanner-bot.service
docs/: COGS_ARCHITECTURE.md  CONTRIBUTING.md  INSTALL.md  PACKAGING.md  README.md  REORGANIZATION.md
docs/deployment/: DEPLOYMENT.md  DISCORD_BOT_DEPLOYMENT.md  PRODUCTION.md
scripts/: build.sh  lint.sh  run-bot.sh  scan.sh
src/: account_scanner.py  discord_bot.py
src/cogs/: moderation.py
tests/: test_discord_bot.py  test_moderation.py  test_scanner.py
