[project]
name = "account-scanner"
version = "1.2.3"
description = "Multi-source account scanner: Reddit toxicity + Sherlock OSINT"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ven0m0"}]
keywords = ["osint", "reddit", "toxicity", "sherlock", "security"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]

dependencies = [
  "httpx[http2]~=0.28.0",  # Allow patch updates in 0.28.x
  "orjson>=3.11.0,<4.0.0",  # Major version lock due to API stability
  "asyncpraw>=7.8.0,<8.0.0",  # Major version lock
  "uvloop~=0.22.0; platform_system != 'Windows'",  # Allow patch updates
  "aiofiles~=25.1",  # Allow minor updates in 24.x
  "py-cord>=2.6.0,<3.0.0",  # Discord bot framework - major version lock
]

[project.optional-dependencies]
dev = [
  "ruff~=0.14.10",
  "mypy~=1.19.1",
  "pytest~=8.3.0",
  "pytest-asyncio~=1.3.0",
  "pip-audit>=2.10.0",  # Security vulnerability scanning
  "types-aiofiles>=24.0.0",  # Type stubs for mypy
]

[project.scripts]
account-scanner = "account_scanner:main"
scanner-bot = "discord_bot:main"

[build-system]
requires = ["setuptools>=78.1.1"]  # Security: CVE-2024-6345, PYSEC-2025-49
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["account_scanner", "discord_bot"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
  ".git",
  ".cache",
  ".var",
  ".venv",
  "venv",
  "node_modules",
  "__pycache__",
  "*.pyc",
]

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort
  "N",     # pep8-naming
  "UP",    # pyupgrade
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "SIM",   # flake8-simplify
  "ASYNC", # flake8-async
  "TCH",   # flake8-type-checking
  "RUF",   # ruff-specific
]
ignore = [
  "E501",   # line too long (formatter handles)
  "SIM105", # contextlib.suppress (prefer explicit)
]

[tool.ruff.lint.isort]
known-first-party = ["account_scanner"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "."]
python_files = ["test_*.py"]
